--- a/packages/docs/src/assets/css/vars.scss
+++ b/packages/docs/src/assets/css/vars.scss
@@ -1,20 +1,20 @@
 html {
-  --es-color-white: #ffffff;
+  --es-color-white: #f0f0f0;
   --es-color-dark: #1a1a1a;
   --es-header-height: 60px;
   --es-border: 1px solid var(--es-border-color);
-  --es-color-bg: var(--el-bg-color);
   --es-layout-aside-width: 240px;
 }
 
 html.light {
   --es-color: #34495e;
   --es-border-color: rgba(60, 60, 60, 0.12);
+  --es-bg-color: var(--es-color-white);
   --es-bg-color-page: #eff2f5;
 }
 html.dark {
   --es-color: rgba(255, 255, 255, 0.75);
   --es-border-color: #363637;
-  // --el-bg-color: #111827;
+  --es-color-bg: var(--es-color-dark);
   --es-bg-color-page: #202124;
 }
